--- a/index.html
+++ b/index.html
@@ -7,18 +7,7 @@
  <body>
      <h1>Danying Chen-Portfolio Page</h1>
      <h2>Labs:</h2>
-     <h3><a href="https://daria9464.github.io/ColorChatLab/lab.html">1. Color Chart Program</a></h2>
-     <h3><a href="https://daria9464.github.io/AudioLab/AudioLab.html">2. Audio Lab</a></h2>
-     <h3><a href="https://daria9464.github.io/Resume/resumeLab.html">3. Resume Lab</a></h2>
-     <br><br> 
-     <h2>Projects:</h2>
-     <h3><a href="https://daria9464.github.io/Cartoon/ProjectCartoon.html">1. Cartoon</a></h3>
-     <h3><a href="https://daria9464.github.io/Animation/Animation.html">2. Animation</a></h3>
-     <h3><a href="https://daria9464.github.io/TextForm/TextForm.html">3. Text Form</a></h3>
-     <h3><a href="https://daria9464.github.io/SpeechRecognitionProject/SpeechRecognitionProject.html">4. Speech Recognition</a></h3>
-     <h3><a href="https://daria9464.github.io/DataVisualiztion/DataVisualiztion.html">5. Data Visualiztion</a></h3>
-     <h3><a href="https://daria9464.github.io/VideoAnimation/VideoAnimation.html">6. Video Animation</a></h3>
-     <h3><a href="https://daria9464.github.io/DragAndDrag/DragandDrop.html">7. Drag and Drop</a></h3>
+     <h3><a href="lab1/lab1.html>111</a></h3>
      
 </body>
 
