--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <h1>Danying Chen-Portfolio Page</h1>
      <h2>Labs:</h2>
      <h3><a href="lab1/lab1.html">111</a></h3>
-     <h3><a href="https://CISC3171.github.io/lab1/lab1.html">111</a></h3>
+     <h3><a href="https://try/lab1/lab1.html">111</a></h3>
      
 </body>
 
